# flowchain

./: README.md  pyproject.toml  setup.py
.github/workflows/: python-publish.yaml  run-tests.yaml
flowchain/: __init__.py  chain.py  chain_tests.py
