[tool.poetry]
name = "flowchain"
version = "0.0.8"
description = "Flowchain - Method Chaining for TensorFlow"
authors = ["OrigamiDream <hello@origamidream.me>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/OrigamiDream/flowchain"
keywords = [
    "machine-learning",
    "deep-learning",
    "tensorflow",
    "method-chaining",
    "extension"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
numpy = ">=1.22,<=1.24.3"
tensorflow = [
    { version = "^2.13.0", platform = "darwin", markers = "platform_machine == 'arm64'" },
    { version = "^2.4.0", platform = "linux" },
    { version = ">=2.4.0,<2.11.0", platform = "win32" },
]
tensorflow-macos = [
    { version = "^2.13.0", platform = "darwin", markers = "platform_machine == 'arm64'" },
    { version = "^2.9.0", platform = "darwin", markers = "platform_machine != 'arm64'", optional = true },
]
tensorflow-metal = { version = "^0.5.0", platform = "darwin", markers = "platform_machine != 'arm64'" }

[tool.poetry.extras]
mac-intel = ["tensorflow-macos"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
